# GQL-api-test

./: .env  Cargo.toml
migrations/: 20231210122051_init.down.sql  20231210122051_init.up.sql  20231210191234_employee.up.sql  20231217165333_employee_role_junction.down.sql  20231217165333_employee_role_junction.up.sql
src/: main.rs
src/config/: mod.rs
src/schema/: mod.rs
src/schema/auth/: auth_model.rs  mod.rs
src/schema/models/employee/: employee_model.rs  mod.rs  role_model.rs
src/schema/resolver/: mod.rs
src/schema/resolver/employee/: employee_resolver.rs  mod.rs  role_resolver.rs
