[package]
name = "finance-graphql-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.11", features = ["chrono", "uuid"] }
async-graphql-axum = "6.0.11"
axum = "0.6.20"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "1.0.50"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
